calendar/libical/src/libical/icalrecur.c
@@ -1752,9 +1752,9 @@ static int next_month(icalrecur_iterator* impl)
       increment_month(impl);
 
       days_in_month = icaltime_days_in_month(impl->last.month,
-                                                   impl->last.year);
-      if (impl->last.day > days_in_month){
-          impl->last.day = days_in_month;
+                                             impl->last.year);
+      if (impl->last.day > days_in_month) {
+          data_valid = 0; /* signal that impl->last is invalid */
       }
   }
 
